[package]
name = "quark"
version = "1.1.0"
edition = "2018"

authors = ["Ryan Quattlebaum <ryan.quattlebaum@icloud.com>"]
description = "Types for manipulating numeric primitives at the bit level."
repository = "https://github.com/ryanq/quark"

license = "MIT"

[badges]
travis-ci = { repository = "ryanq/quark" }

[dev-dependencies]
spectral = "0.6.0"
